-spacing issue fix

--- a/src/assets/scss/intelligence/_transactionHistory.scss
+++ b/src/assets/scss/intelligence/_transactionHistory.scss
@@ -145,7 +145,7 @@
         }
 
         .transaction-table-section {
-            margin-bottom: 5rem;
+            margin-bottom: 7rem;
             position: relative;
             .table-wrapper {
                 background: $secondary;
